kubernetes-showcase/05-scaling-load-balancing/flask-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-loadbalancer
spec:
  selector:
    app: flask-db
  ports:
    - protocol: TCP
      port: 8082          # Port exposed externally
      targetPort: 5000     # Target port inside Flask container
  type: LoadBalancer
