kubernetes-showcase/05-scaling-load-balancing/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30085
  type: NodePort
